# network-from-scratch

./: .gitignore  CLAUDE.md  README.md  SYLLABUS.md  glossary.md
.github/workflows/: ci.yml
assets/formal/: G6Handshake.cfg  G6Handshake.pv  G6Handshake.tla  G6Ratchet.spthy  ProteusHandshake.cfg  ProteusHandshake.pv  ProteusHandshake.tla  ProteusRatchet.spthy
assets/papers/: README.md
assets/spec/: g6-v0.1.md  proteus-v0.1.md  proteus-v1.0.md
lessons/part-0-orientation/: 0.1-vpn-misnomer.md  0.2-course-map.md  0.3-research-methodology.md  0.4-literature-map.md  0.5-tooling.md
lessons/part-1-networking/: 1.1-layering-truth.md  1.10-tcp-congestion-control.md  1.11-tcp-advanced.md  1.12-udp-anatomy.md  1.13-ipv6-anatomy.md  1.14-dns-anatomy.md  1.15-bgp-internet-routing.md  1.16-cdn-anycast.md  1.17-google-50ms-walkthrough.md  1.18-linux-network-stack.md  1.2-physical-and-phy-mac.md  1.3-ethernet-l2.md  1.4-ip-routing-graph.md  1.5-arp-ndp-dhcp.md  1.6-icmp-deep.md  1.7-nat-taxonomy.md  1.8-tcp-connection-mgmt.md  1.9-tcp-reliable-delivery.md
lessons/part-10-traffic-analysis/: 10.1-information-theory.md  10.10-sok-censorship-resistance.md  10.11-threat-defense-matrix.md  10.12-provable-defense.md  10.2-statistical-fingerprints.md  10.3-deep-learning-classifiers.md  10.4-adversarial-examples.md  10.5-defense-survey.md  10.6-pluggable-transports.md  10.7-regularization-disruption.md  10.8-connection-vs-app-disguise.md  10.9-probabilistic-decoy-traffic.md
lessons/part-11-design/: 11.1-threat-model.md  11.10-formal-proverif.md  11.11-formal-tamarin.md  11.12-design-review.md  11.13-spec-v01.md  11.14-design-capstone.md  11.15-proteus-v1-evolution.md  11.2-goals-non-goals.md  11.3-design-space.md  11.4-architecture-decision.md  11.5-spec-wire-format.md  11.6-spec-handshake-state.md  11.7-spec-errors-security.md  11.8-spec-extensibility.md  11.9-formal-tla-plus.md
lessons/part-12-implement-evaluate/: 12.0-proteus-implementation-blueprint.md  12.1-implementation-language-choice.md  12.10-interoperability-testing.md  12.11-performance-baseline.md  12.12-throughput-evaluation.md  12.13-high-loss-evaluation.md  12.14-cpu-memory-evaluation.md  12.15-passive-dpi-evaluation.md  12.16-active-probing-evaluation.md  12.17-ml-classification-evaluation.md  12.18-real-world-testing.md  12.19-results-iteration.md  12.2-crypto-primitives-implementation.md  12.20-documentation.md  12.21-release-preparation.md  12.22-paper-writing-intro-related.md  12.23-paper-writing-design-eval.md  12.24-capstone.md  12.3-handshake-implementation.md  12.4-data-path-zerocopy-iouring-xdp.md  12.6-client-integration.md  (+4 more)
projects/: README.md
projects/proteus/: CHANGELOG.md  Cargo.toml  README.md  deny.toml
projects/proteus/crates/proteus-client/: Cargo.toml
projects/proteus/crates/proteus-client/src/: config.rs  keygen.rs  lib.rs  main.rs  socks.rs
projects/proteus/crates/proteus-client/tests/: binary_launch.rs  binary_launch_beta.rs  concurrency_cap.rs  dual_stack.rs
projects/proteus/crates/proteus-crypto/: Cargo.toml
projects/proteus/crates/proteus-crypto/benches/: aead_throughput.rs  handshake_kex.rs
projects/proteus/crates/proteus-crypto/src/: aead.rs  kdf.rs  kex.rs  key_schedule.rs  lib.rs  ratchet.rs  sig.rs
projects/proteus/crates/proteus-fingerprint/: Cargo.toml
projects/proteus/crates/proteus-fingerprint/src/: ja4.rs  lib.rs
projects/proteus/crates/proteus-fingerprint/tests/: parser_correctness.rs  proteus_alpha_ja4_baseline.rs
projects/proteus/crates/proteus-handshake/: Cargo.toml
projects/proteus/crates/proteus-handshake/src/: auth_tag.rs  lib.rs  replay.rs  state.rs
projects/proteus/crates/proteus-server/: Cargo.toml
projects/proteus/crates/proteus-server/src/: admin.rs  config.rs  gencert.rs  keygen.rs  lib.rs  main.rs  metrics_http.rs  relay.rs  startup.rs  validate.rs
projects/proteus/crates/proteus-server/tests/: abuse_alert.rs  access_log.rs  admin_diff_cli.rs  admin_json_cli.rs  admin_status_cli.rs  alpha_beta_coexist.rs  binary_launch.rs  byte_budget.rs  graceful_drain.rs  idle_timeout.rs  outbound_filter_e2e.rs  session_leak_regression.rs  validate_cli.rs
projects/proteus/crates/proteus-shape/: Cargo.toml
projects/proteus/crates/proteus-shape/src/: cell.rs  lib.rs  shift.rs
projects/proteus/crates/proteus-spec/: Cargo.toml
projects/proteus/crates/proteus-spec/src/: lib.rs
projects/proteus/crates/proteus-transport-alpha/: Cargo.toml
projects/proteus/crates/proteus-transport-alpha/benches/: relay_throughput.rs
projects/proteus/crates/proteus-transport-alpha/src/: abuse_detector.rs  access_log.rs  client.rs  cover.rs  error.rs  firewall.rs  lib.rs  metrics.rs  metrics_http.rs  outbound_filter.rs  pow.rs  rate_limit.rs  server.rs  session.rs  tls.rs
projects/proteus/crates/proteus-transport-alpha/tests/: abuse_rate_limit.rs  cell_split_padding.rs  client_id_unlinkability.rs  cover_forward.rs  cover_forward_fast_teardown.rs  dh_ratchet_heal.rs  end_to_end.rs  firewall_cover.rs  firewall_reload.rs  global_budget.rs  handshake_panic_robustness.rs  handshake_rx_cap.rs  heartbeat_cover.rs  max_connections.rs  padded_data_plane.rs  pow_handshake.rs  prom_exposition.rs  server_ephemeral_pfs.rs  socks_via_tls.rs  throughput_smoke.rs  tls_channel_binding.rs  tls_end_to_end.rs  tls_reload.rs  user_rate_limit.rs
projects/proteus/crates/proteus-transport-beta/: Cargo.toml
projects/proteus/crates/proteus-transport-beta/benches/: relay_throughput_beta.rs
projects/proteus/crates/proteus-transport-beta/src/: client.rs  datagram.rs  error.rs  lib.rs  server.rs
projects/proteus/crates/proteus-transport-beta/tests/: datagram_e2e.rs  end_to_end.rs  quic_channel_binding.rs  throughput_smoke.rs
projects/proteus/crates/proteus-wire/: Cargo.toml
projects/proteus/crates/proteus-wire/src/: alpha.rs  lib.rs  varint.rs
projects/proteus/crates/proteus-wire/tests/: property.rs
projects/proteus/deploy/: Dockerfile  README.md  client.example.yaml  docker-compose.yml  server.example.yaml
projects/proteus/deploy/systemd/: proteus-server.service
qa/: README.md
(+332 files in other folders)
