[workspace]
resolver = "2"
members = [
    "crates/proteus-spec",
    "crates/proteus-wire",
    "crates/proteus-crypto",
    "crates/proteus-shape",
    "crates/proteus-handshake",
    "crates/proteus-transport-alpha",
    "crates/proteus-transport-beta",
    "crates/proteus-server",
    "crates/proteus-client",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0 OR MIT"
authors = ["Icarus (Icarus603) <noreply@example.com>"]
repository = "https://github.com/Icarus603/network-from-scratch"
rust-version = "1.85"

[workspace.dependencies]
# Spec / wire helpers
zerocopy = "0.7"
bytes = "1.7"
thiserror = "1.0"

# Crypto primitives (RustCrypto family, audited and pure-Rust)
x25519-dalek = { version = "2.0", default-features = false, features = ["static_secrets", "reusable_secrets"] }
ed25519-dalek = { version = "2.1", default-features = false, features = ["rand_core"] }
ml-kem = { version = "0.2", default-features = false }
chacha20poly1305 = { version = "0.10", default-features = false, features = ["alloc"] }
aes-gcm = { version = "0.10", default-features = false, features = ["alloc", "aes"] }
sha2 = { version = "0.10", default-features = false }
hkdf = "0.12"
hmac = "0.12"
blake3 = { version = "1.5", default-features = false }
rand_core = { version = "0.6", default-features = false }
subtle = { version = "2.5", default-features = false }
zeroize = { version = "1.7", default-features = false, features = ["derive"] }

# Async (kept minimal; only handshake/transport will need this)
tokio = { version = "1.40", default-features = false }

# TLS 1.3 outer wrapper (spec §4.2).
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
webpki-roots = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.dev]
opt-level = 1   # ml-kem / x25519 too slow at opt-level 0
