[package]
name = "proteus-server"
version = "0.1.0"
edition.workspace = true
publish = false
license.workspace = true
authors.workspace = true
description = "Proteus α-profile server binary — production-ready proxy upstream relay"

[[bin]]
name = "proteus-server"
path = "src/main.rs"

[dependencies]
proteus-spec = { path = "../proteus-spec" }
proteus-wire = { path = "../proteus-wire" }
proteus-crypto = { path = "../proteus-crypto" }
proteus-handshake = { path = "../proteus-handshake" }
proteus-transport-alpha = { path = "../proteus-transport-alpha" }
proteus-transport-beta = { path = "../proteus-transport-beta" }
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls-ring"] }

ml-kem.workspace = true
ed25519-dalek.workspace = true
x25519-dalek.workspace = true
rand_core = { workspace = true, features = ["getrandom"] }
zeroize.workspace = true
thiserror.workspace = true

tokio = { workspace = true, features = ["net", "io-util", "rt", "rt-multi-thread", "macros", "time", "sync", "signal", "fs"] }

serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rcgen = "0.13"

[dev-dependencies]
libc = "0.2"
rcgen = "0.13"
rustls = { workspace = true }

[lints.rust]
# `deny` (not `forbid`) so that the binary_launch integration test
# can scope-allow `unsafe` for libc::kill(SIGTERM).
unsafe_code = "deny"

[lints.clippy]
all = "warn"
