[package]
name = "proteus-transport-alpha"
version = "0.1.0"
edition.workspace = true
publish = false
license.workspace = true
authors.workspace = true
description = "Proteus profile-α (TLS 1.3 over TCP) transport — M1 reference: raw-TCP carrier with full Proteus handshake + AEAD records"

[dependencies]
proteus-spec = { path = "../proteus-spec" }
proteus-wire = { path = "../proteus-wire" }
proteus-crypto = { path = "../proteus-crypto" }
proteus-handshake = { path = "../proteus-handshake" }
proteus-shape = { path = "../proteus-shape" }

ml-kem.workspace = true
x25519-dalek.workspace = true
ed25519-dalek.workspace = true
rand_core = { workspace = true, features = ["getrandom"] }
zeroize.workspace = true
thiserror.workspace = true
hmac.workspace = true
sha2.workspace = true
subtle.workspace = true

tokio = { workspace = true, features = ["net", "io-util", "rt", "rt-multi-thread", "macros", "time", "sync", "fs"] }

socket2 = "0.6"
libc = "0.2"
tracing = "0.1"

# Real TLS 1.3 outer (spec §4.2). The α-profile transport runs the
# Proteus framing inside a genuine TLS 1.3 record stream so that a
# passive observer sees a standards-compliant TLS handshake.
rustls = { workspace = true }
tokio-rustls = { workspace = true }
webpki-roots = { workspace = true }
# Direct rustls-webpki dep so we can construct a custom
# `WebPkiSupportedAlgorithms` that emits Chrome-shaped sig_algs on the
# wire. rustls re-exports this same crate internally as `webpki`; we
# pin the exact version rustls 0.23 uses to keep both views consistent.
rustls-webpki = { version = "0.103", default-features = false, features = ["std", "ring"] }

[dev-dependencies]
rcgen = "0.13"
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

[[bench]]
name = "relay_throughput"
harness = false

[lints.rust]
# `deny` (not `forbid`) so that the tightly-scoped TCP-keepalive
# fd-dup helper in server.rs can opt in via #[allow(unsafe_code)].
unsafe_code = "deny"

[lints.clippy]
all = "warn"
